welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: illegal start of simple expression
var biscuit:Int=0
^